--- a/app/src/app/tutorial_3.html
+++ b/app/src/app/tutorial_3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
   <head>
-    <title>stl.cool - Gateway Arc</title>
+    <title>Angular Material - Starter App</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
@@ -14,7 +14,7 @@
   </head>
 
   <!--
-    ✓ Create Angular shell appf
+    ✓ Create Angular shell app
     ✓ Use `bower install angular-material`
     ✓ Load the CSS (before our app.css),
     ✓ Load the angular-material.js library and its dependent angular-aria.js and angular-animate.js libraries.
@@ -32,7 +32,7 @@
   <body ng-app="starterApp" layout="column">
 
     <md-toolbar layout="row">
-      <h3>stl.cool - Gateway Arc</h3>
+      <h3>Angular Material - Starter App</h3>
     </md-toolbar>
 
     <div flex layout="row">
@@ -75,13 +75,6 @@
     <script src="../node_modules/angular-aria/angular-aria.js"></script>
     <script src="../node_modules/angular-material/angular-material.js"></script>
 
-    <!-- <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.14/angular.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.14/angular-animate.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.14/angular-aria.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.14/angular-messages.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.1/angular-material.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
-    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script> -->
     <script type="text/javascript">
 
       angular
@@ -91,17 +84,6 @@
           });
 
     </script>
-    <script>
-      // Initialize the Firebase SDK
-      var config = {
-        apiKey: "AIzaSyAS7oyD6eEg_TLvMVlwiN1WBfHKqoSoyZE",
-        authDomain: "hot-shorts-4e79e.firebaseapp.com",
-        databaseURL: "https://hot-shorts-4e79e.firebaseio.com",
-        storageBucket: "hot-shorts-4e79e.appspot.com",
-        messagingSenderId: "67914260758"
-      };
-      firebase.initializeApp(config);
-    </script>  
 
   </body>
 </html>
