--- a/app/styles/angular-material.scss
+++ b/app/styles/angular-material.scss
@@ -1,6 +1,6 @@
 // Typography
 // ------------------------------
-$font-family: RobotoDraft, 'Helvetica Neue', sans-serif !default;
+$font-family: RobotoDraft, Roboto, 'Helvetica Neue', sans-serif !default;
 $font-size:   10px !default;
 
 //-- Must be defined before $font-size.
