--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,5 @@
 html, body {
+  font-family: 'RobotoDraft', sans-serif;
   font-size:14px;
   height:100%;
   margin: 0px;
@@ -47,13 +48,12 @@ md-list-item > button {
 }
 
 #content .md-button.share {
-  background-color: transparent;
   border: none;
-  width: 48px;
-  height: 48px;
+  width: 64px;
+  height: 64px;
   margin: 8px auto 16px 0;
   position: absolute;
-  top: 10px;
+  top: 15px;
   right: 25px;
 }
 
