--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,7 +1,7 @@
 
 $colorBlue: #3372df !default;
 $colorBlueSecondary: lighten($colorBlue, 30%) !default;
-$colorGreen: #0f9d58 !default;
+$colorGreen: #4800FF !default;
 $colorGreenSecondary: lighten($colorGreen, 30%) !default;
 $colorRed: #cb4437 !default;
 $colorRedSecondary: lighten($colorRed, 30%) !default;
@@ -25,7 +25,7 @@ $colorDanger: $colorRed !default;
 
 $colorLayouts: #297ea9 !default;
 $colorLayoutsSecondary: lighten($colorLayouts, 30%) !default;
-$colorUser: #2c8566 !default;
+$colorUser: #007F46 !default;
 $colorUserSecondary: lighten($colorUser, 30%) !default;
 $colorMedia: #cf423a !default;
 $colorMediaSecondary: lighten($colorMedia, 30%) !default;
